<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <View
        android:background="#44999999"
        android:id="@+id/share_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></View>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <View
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:background="@drawable/dialog_shape"
                android:orientation="vertical"
                android:layout_weight="10"
                android:layout_width="0dp"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_weight="4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/input_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_marginLeft="@dimen/pin_input_margin"
                                android:layout_marginRight="@dimen/pin_input_margin"
                                android:singleLine="true"
                                android:id="@+id/dialog_header"
                                android:gravity="center"
                                android:text="@string/enter_pin"
                                android:textColor="@color/white"
                                android:textSize="@dimen/button_ts"
                                android:layout_weight="1.5"
                                android:layout_width="match_parent"
                                android:layout_height="0dp" />

                            <EditText
                                android:id="@+id/dialog_text"
                                android:layout_marginLeft="@dimen/pin_input_margin"
                                android:layout_marginRight="@dimen/pin_input_margin"
                                android:imeOptions="actionDone"
                                android:textSize="@dimen/button_ts"
                                android:maxLength="50"
                                android:gravity="center"
                                android:paddingLeft="@dimen/sign_up_edit_input_tp"
                                android:paddingRight="@dimen/sign_up_edit_input_tp"
                                android:textColorHint="@color/grey"
                                android:textColor="@color/back"
                                android:background="@drawable/pin_shape"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="0dp" />

                            <TextView
                                android:visibility="invisible"
                                android:id="@+id/dialog_message"
                                android:gravity="center"
                                android:textColor="@color/red"
                                android:textSize="@dimen/button_ts"
                                android:layout_weight="2.5"
                                android:layout_width="match_parent"
                                android:layout_height="0dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:visibility="gone"
                            android:id="@+id/forgot_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"></LinearLayout>
                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:background="@drawable/ic_dialog_bot"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dialog_cancel"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="@dimen/button_ts"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/dialog_forgot"
                        android:gravity="center"
                        android:text="@string/forgot_pin"
                        android:textColor="@color/white"
                        android:textSize="@dimen/button_ts"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/dialog_done"
                        android:gravity="center"
                        android:text="@string/done"
                        android:textColor="@color/white"
                        android:textSize="@dimen/button_ts"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />


        </LinearLayout>

        <View
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>

</RelativeLayout>